# edge-events-adapters

./: README.md  TODO.md  pyproject.toml
src/edge_events_adapters/: alb.py  alb_discovery.py  apache_config.py  app_discovery.py  app_logs.py  cli.py  discovery.py  dns.py  dns_discovery.py  firewall.py  firewall_discovery.py  journald.py  merge.py  nginx.py  nginx_config.py  syslog.py  syslog_discovery.py  xff.py
