[project]
name = "edge-events-adapters"
version = "0.1.0"
description = "Adapters to normalize edge logs to events.jsonl"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
edge-events-adapters = "edge_events_adapters.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
